--- a/css/style.css
+++ b/css/style.css
@@ -11,20 +11,17 @@
 }
 
 .fa-solid {
-    color: var(--main-color);
+    border: none;
+    color: #F2F2F2;
 }
 
 body {
     display: flex;
     justify-content: center;
+    margin: 0px;
 }
 
-.main-container {
-    width: 100%;
-    max-width: 1440px;
-    padding: 0 50px;
-    box-sizing: border-box;
-}
+
 
 a {
     color: inherit;
@@ -32,38 +29,53 @@ a {
 }
 
 /* Header section */
+.main-container {
+    width: 100%;
+    max-width: 1440px;
+    padding: 0 50px;
+    box-sizing: border-box;
+}
+
 header {
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    
 }
 
 nav {
+    
     display: flex;
-    gap: 20px;
+    gap: 68px;
 }
 
 .header-button {
-    padding: 0px, 50px, 0px, 50px;
+    
+    padding: 15px 0 0 0;
     background-color: transparent;
-    border: none;
+    border-top: 2px solid transparent;
+    border-right: none;
+    border-bottom: none;
+    border-left: none;
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
 }
 
 .header-button:hover {
-    border-top: solid #0065FC;
+    border-top-color: #0065FC;
     color: #0065FC;
 }
 
 img {
-    padding: 30px, 50px, 30px, 50px;
-    width: 61,09px;
+    padding: 30px 50 30 50;
+    margin-top: 20px;
+    width: 61.09px;
     height: 19px;
     top: 30px;
-    left: 50px;;
+    left: 50px;
+    gap: 10px;
 }
 
 .section-title {
@@ -94,6 +106,64 @@ img {
     color: var(--main-bg-color)
 }
 
+/* Barre de recherche */
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.search-input-container {
+    display: flex;
+    align-items: center;
+    border: 1px solid var(--main-bg-color);
+    border-radius: 15px 0 0 15px;
+    padding: 10px 15px;
+    background-color: white;
+}
+
+.search-input-container i {
+    color: black;
+    margin-right: 10px;
+}
+
+.search-input-container input {
+    border: none;
+    outline: none;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.search-button {
+    background-color: var(--main-color);
+    color: white;
+    border: none;
+    border-radius: 0 15px 15px 0;
+    padding: 15px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.search-icon {
+    display: none;
+}
+
+@media (max-width: 767.98px) {
+    .search-text {
+        display: none;
+    }
+    
+    .search-icon {
+        display: inline;
+    }
+    
+    .search-button {
+        border-radius: 15px;
+        padding: 15px;
+    }
+}
 
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
@@ -111,6 +181,7 @@ img {
 /* Search section */
 .search-section {
     text-align: left;
+    margin-top: 40px;
     margin-bottom: 40px;
 }
 
@@ -143,6 +214,7 @@ img {
     justify-content: left;
     gap: 10px;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .filter-button {
@@ -169,10 +241,6 @@ img {
 .availability-info {
     color: black;
     font-size: 14px;
-    display: flex;
-    justify-content: left;
-    align-items: left;
-    gap: 5px;
 }
 
 /****** Hebergements ***********/
