--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,7 @@ img {
 }
 
 /* Search section */
+
 .search-section {
     text-align: left;
     margin-top: 40px;
@@ -229,37 +230,50 @@ img {
 }
 
 .filters {
+    font-size: x-small;
+    font-weight: 600;
     display: flex;
-    justify-content: left;
-    gap: 10px;
-    margin-bottom: 20px;
+    gap: 15px;
+    margin-bottom: 35px;
     margin-top: 20px;
 }
 
 .filter-button {
-    padding: 4px, 19px, 4px, 19px;
-    background-color: var(--filter-bg-color);
-    border: none;
-    border-radius: 5px;
+    padding: 4px 19px 4px 19px;
+    font-weight: 700;
+    justify-content: space-between;
+    background-color: white;
+    border: 2px #F2F2F2 solid;
+    border-radius: 25px;
     cursor: pointer;
     font-size: 16px;
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
 }
 
-.filter-button.active {
-    background-color: var(--active-filter-bg-color);
+.filter-button.active:hover {
+    background-color: var(--active-filter-bg-color); 
+
 }
 
 .filter-button i {
-    font-size: 18px;
+    font-size: 24px;
     color: var(--main-color);
 }
 
 .availability-info {
+    font-weight: 450;
     color: black;
     font-size: 14px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    gap: 10px;
+}
+
+.availability-info i{
+    background-color: white;
+    color: #0065FC;
 }
 
 /****** Hebergements ***********/
