--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ img {
 
 .search-section {
     text-align: left;
+    font-weight: 450;
     margin-top: 40px;
     margin-bottom: 40px;
 }
@@ -263,17 +264,28 @@ img {
 }
 
 .availability-info {
-    font-weight: 450;
+    font-weight: 425;
     color: black;
-    font-size: 14px;
+    font-size: 16px;
     margin-top: 20px;
     margin-bottom: 20px;
+    display: flex;
+    align-items: center;
     gap: 10px;
 }
 
 .availability-info i{
+    color: var(--main-color);
     background-color: white;
-    color: #0065FC;
+    border: 1px solid #D9D9D9;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    
 }
 
 /****** Hebergements ***********/
