--- a/css/style.css
+++ b/css/style.css
@@ -13,20 +13,19 @@
 .fa-solid {
     border: none;
     color: #F2F2F2;
-    font-size: 14px;
+    font-size: 0.875em;
 }
 
 .fa-star.blue {
     color: #0065FC;
 
 }
+
 body {
     display: flex;
     justify-content: center;
-    margin: 0px;
+    margin: 0;
 }
-
-
 
 a {
     color: inherit;
@@ -38,7 +37,7 @@ a {
 .main-container {
     width: 100%;
     max-width: 1440px;
-    padding: 0 50px;
+    padding: 0 3em;
     box-sizing: border-box;
 }
 
@@ -52,18 +51,18 @@ header {
 
 nav {
     display: flex;
-    gap: 68px;
+    gap: 4.25em;
 }
 
 .header-button {
     
-    padding: 15px 0 0 0;
+    padding: 0.9375em 0 0 0;
     background-color: transparent;
-    border-top: 2px solid transparent;
+    border-top: 0.125em solid transparent;
     border-right: none;
     border-bottom: none;
     border-left: none;
-    font-size: 16px;
+    font-size: 1em;
     font-weight: 500;
     cursor: pointer;
 }
@@ -75,20 +74,20 @@ nav {
 
 .logo {
     padding-top: 1em;
-    height: 19px;
+    height: 1.188em;
     cursor: pointer;
 }
 
 .section-title {
     margin: 0;
-    font-size: 22px;
+    font-size: 1.375em;
 }
 
 .card {
     background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    border-radius: 1.25em;
+    padding: 0.3125em;
+    filter: drop-shadow(0 0.1875em 0.9375em rgba(0, 0, 0, 0.1));
 }
 
 .card img {
@@ -96,7 +95,7 @@ nav {
 }
 
 .card-title {
-    font-size: 16px;
+    font-size: 1em;
 }
 
 .euro {
@@ -110,20 +109,20 @@ nav {
 /* Barre de recherche */
 
 .search-form {
-    margin: 20px 0;
+    margin: 1.25em 0;
 }
 
 .search-container {
     display: flex;
     max-width: 1440px;
-    border-radius: 15px;
+    border-radius: 0.9375em;
     overflow: hidden;
-    border: 1px solid var(--main-bg-color);
+    border: 0.0625em solid var(--main-bg-color);
 }
 
 .location-icon {
     background-color: var(--main-bg-color);
-    padding: 15px;
+    padding: 0.9375em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -136,8 +135,8 @@ nav {
 .search-input {
     flex-grow: 1;
     border: none;
-    padding: 0 15px;
-    font-size: 18px;
+    padding: 0 0.9375em;
+    font-size: 1.125em;
     font-weight: bold;
     outline: none;
 }
@@ -146,8 +145,8 @@ nav {
     background-color: var(--main-color);
     color: white;
     border: none;
-    padding: 15px 20px;
-    font-size: 18px;
+    padding: 0.9375em 1.25em;
+    font-size: 1.125em;
     font-weight: bold;
     cursor: pointer;
 }
@@ -166,8 +165,8 @@ nav {
 
 .hebergements-and-populaires section {
     background-color: var(--main-bg-color);
-    border-radius: 20px;
-    padding: 30px;
+    border-radius: 1.25em;
+    padding: 1.875em;
     box-sizing: border-box;
 }
 
@@ -176,53 +175,52 @@ nav {
 .search-section {
     text-align: left;
     font-weight: 450;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 2.5em;
+    margin-bottom: 2.5em;
 }
 
 .search-bar {
     display: flex;
     justify-content: left;
-    margin: 10px 0;
+    margin: 0.625em 0;
 }
 
 .search-bar input {
-    width: 300px;
-    padding: 10px;
-    font-size: 16px;
+    padding: 0.625em;
+    font-size: 1em;
 }
 
 .search-button {
-    padding: 10px 20px;
+    padding: 0.625em 1.25em;
     background-color: var(--main-color);
     color: white;
     border: none;
-    border-radius: 0 5px 5px 0;
+    border-radius: 0 0.3125em 0.3125em 0;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1em;
 }
 
 .filters {
-    font-size: x-small;
+    font-size: 0.75em;
     font-weight: 600;
     display: flex;
-    gap: 15px;
-    margin-bottom: 35px;
-    margin-top: 20px;
+    gap: 0.9375em;
+    margin-bottom: 2.1875em;
+    margin-top: 1.25em;
 }
 
 .filter-button {
-    padding: 4px 19px 4px 19px;
+    padding: 0.25em 1.1875em 0.25em 1.1875em;
     font-weight: 700;
     justify-content: space-between;
     background-color: white;
-    border: 2px #F2F2F2 solid;
-    border-radius: 25px;
+    border: 0.125em #F2F2F2 solid;
+    border-radius: 1.5625em;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1.3em;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 0.625em;
 }
 
 .filter-button.active:hover {
@@ -231,32 +229,32 @@ nav {
 }
 
 .filter-button i {
-    font-size: 24px;
+    font-size: 1em;
     color: var(--main-color);
 }
 
 .availability-info {
     font-weight: 425;
     color: black;
-    font-size: 16px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    font-size: 1em;
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 0.625em;
 }
 
 .availability-info i{
     color: var(--main-color);
     background-color: white;
-    border: 1px solid #D9D9D9;
+    border: 0.0625em solid #D9D9D9;
     border-radius: 50%;
-    width: 24px;
-    height: 24px;
+    width: 1.5em;
+    height: 1.5em;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 12px;
+    font-size: 0.75em;
     
 }
 
@@ -264,7 +262,7 @@ nav {
 
 .hebergements {
     max-width: 1440px;
-    gap: 10px;
+    gap: 0.625em;
 }
 
 .hebergements-title {
@@ -282,13 +280,13 @@ nav {
 .hebergements-cards {
     width: 30%;
     display: flex;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-top-left-radius: 1.25em;
+    border-top-right-radius: 1.25em;
 }
 
 .hebergements-cards img {
-    width: 250px;
-    height: 124px;
+    width: 15.625em;
+    height: 7.75em;
     object-fit: cover;
 }
 
@@ -302,17 +300,17 @@ nav {
 
 .hebergements .card-title {
     margin: 10px 0 5px 0;
-    font-size: 16px;
-    gap: 8px;
+    font-size: 1em;
+    gap: 0.5em;
 }
 
 .hebergements .card-subtitle {
     margin: 5px 0 10px 0;
-    font-size: 16px;
+    font-size: 1em;
 }
 
 .hebergements .card-rating {
-    font-size: 12px;
+    font-size: 0.75em;
 }
 
 .directionRow {
@@ -324,8 +322,8 @@ nav {
 }
 .afficher-plus {
     font-weight: 700;
-    font-size: 18px;
-    margin-top: 30px;
+    font-size: 1.125em;
+    margin-top: 1.875em;
     cursor: pointer;
 }
 
@@ -343,19 +341,19 @@ nav {
 
 .populaires-cards .card {
     display: flex;
-    margin-top: 33px;
+    margin-top: 2.0625em;
 }
 
 .populaires-cards img {
     width: 33%;
-    height: 136px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    height: 8.5em;
+    border-top-left-radius: 1.25em;
+    border-bottom-left-radius: 1.25em;
 }
 
 .populaires-cards .card-content {
     width: 67%;
-    padding-left: 15px;
+    padding-left: 0.9375em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -363,8 +361,8 @@ nav {
 }
 
 .populaires-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 4px;
+    margin-top: 0.625em;
+    margin-bottom: 0.25em;
 }
 
 .populaires-cards .card-subtitle {
@@ -372,7 +370,7 @@ nav {
 }
 
 .populaires-cards .card-rating {
-    margin-bottom: 5px;
+    margin-bottom: 0.3125em;
 }
 
 
@@ -380,53 +378,60 @@ nav {
 
 .activites-section {
     background-color: white;
-    border-radius: 20px;
+    border-radius: 1.25em;
 }
 
 .activites {
     width: 100%;
-    padding: 1.88em;
-    gap: 1.88em;
+    padding: 1.75em;
+    box-sizing: border-box;
 }
 
 .card-activites {
+    width: 18.594em;
+    height: 27.438em;
     background-color: white;
-    border-radius: 20px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    border-radius: 1.25em;
+    overflow: hidden;
+    filter: drop-shadow(0 0.1875em 0.9375em rgba(0, 0, 0, 0.1));
+
 }
 
 .activites-title {
-    font-size: 22px;
+    font-size: 1.375em;
     display: flex;
-    padding: 15px;
+    padding-bottom: 1.5em;
+    padding-top: 1em;
+    margin: 0;
 }
 
 .activites-cards img {
-    width: 17.5em;
-    height: 22.5em;
-    border-radius: 20px 20px 0 0;
+    width: 100%;
+    height: 88.6%;
+    border-radius: 1.25em 1.25em 0 0;
     object-fit: cover;
 }
 
 .activites-card-content {
     display: flex;
-    font-size: 16px;
+    font-size: 1em;
 }
 
 .activites-card-title {
-    font-size: 16px;
-    padding-left: 20px;
-    margin-top: 18px;
-    margin-bottom: 20px;
+    font-size: 1em;
+    padding-left: 1.25em;
+    margin-top: 1.125em;
+    margin-bottom: 1.25em;
 }
 
 .activites-cards .card-rating {
-    margin-bottom: 5px;
+    margin-bottom: 0.3125em;
 }
 
 .directionRow-activites {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     gap: 1.5em;
     width: 100%;
 }
@@ -437,22 +442,22 @@ nav {
     background-color: #F2F2F2;
     display: flex;
     justify-content: space-between;
-    padding: 0px 20px 0px 20px;
-    margin-top: 30px;
-    gap: 35px;
+    padding: 0 1.25em 0 1.25em;
+    margin-top: 1.875em;
+    gap: 2.1875em;
 }
 
 p {
     font-size: 1em;
-    margin: 6px;
+    margin: 0.375em;
 }
 
 .a-propos, .nos-hebergements, .assistance {
-    width: 446px;
-    height: 163px;
+    width: 27.875em;
+    height: 10.1875em;
     display: flex;
     flex-direction: column;
-    font-size: 15px;
+    font-size: 0.9375em;
 }
 
 h2 {
@@ -501,6 +506,7 @@ h2 {
 
     .activites {
         width: 100%;
+        padding: 1em 1em 1em 1em;
     }
 
     .activites-cards {
@@ -509,8 +515,23 @@ h2 {
         justify-content: space-between;
     }
 
+    .activites-cards img {
+        width: 100%;
+        height: 74%;
+    }
+
+    .directionRow-activites {
+        gap: 1em;
+    }
+
+    .activites-card-title {
+        font-size: 1em;
+        display: flex;
+        align-items: baseline;
+    }
     .card-activites {
-        
+        width: 13.146em;
+        height: 16.875em;
     }
 }
 
